Added nuspec, tests, some refactors, and readme

--- a/Sini.UnitTest/ok_file.ini
+++ b/Sini.UnitTest/ok_file.ini
@@ -24,6 +24,9 @@ bool_val_neg3 = no
 bool_val_neg4 = FalsE
 bool_val_neg5 = 0
 key.with.dot = val
+short_val = 5
+enum_val = Bar
+point_val = 5,-7
 
 [section2]
 
@@ -37,5 +40,10 @@ value_with_comment = hello ;comment
 
 bad_bool = yis
 bad_int = 1.4
-bad_float = 4.42151556645215235325523523532352523
 bad_ulong = -10
+bad_enum1 = bla
+bad_enum2 = bar
+
+[special]
+
+point_val = 15,25
