--- a/Sini.UnitTest/Sini.UnitTest.csproj
+++ b/Sini.UnitTest/Sini.UnitTest.csproj
@@ -18,6 +18,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="test_object_multi.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="test_object.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="ok_file.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
