--- a/Sini.UnitTest/ok_file.ini
+++ b/Sini.UnitTest/ok_file.ini
@@ -29,6 +29,15 @@ enum_val = Bar
 point_val = 5,-7
 char_val = a
 
+multiline = this is \
+a multiline \
+value.
+
+multiline_2 = this is \
+\
+a double multiline \
+value.
+
 [section2]
 
 ; comment line
