--- a/Sini.UnitTest/ok_file_parsed_and_written.ini
+++ b/Sini.UnitTest/ok_file_parsed_and_written.ini
@@ -1,9 +1,7 @@
-﻿
-; global value comment
+﻿# global value comment
 global_val = foo
 
 [section1]
-
 str_val = val1
 int_val = 123
 long_val = 12345678901234
@@ -29,42 +27,30 @@ short_val = 5
 enum_val = Bar
 point_val = 5,-7
 char_val = a
-
-multiline = this is \
-a multiline \
+multiline = this is\
+a multiline\
 value.
-
-multiline_2 = this is \
+multiline_2 = this is\
 \
-a double multiline \
+a double multiline\
 value.
 
 [section2]
-
-; comment line
-hello=world
-
-#comment line 2
-value_with_comment = hello ;comment (note: this comment will not be parsed. we only parse comment lines)
+# comment line
+hello = world
+# comment line 2
+value_with_comment = hello
 
 [invalids]
-
 bad_bool = yis
 bad_int = 1.4
 bad_ulong = -10
 bad_enum1 = bla
 bad_enum2 = bar
 
-; section comment
+# section comment
 [special]
-
-; this part of the comment will be removed
-; due to the empty line below us
-; the thing is, we can't tell if this comment is part of the comment for "point_val"
-; or maybe we have a hidden value here, like this:
-; hidden_val = something
-; so we just ignore these comments.
-
-; but this part of the multiline comment
-; will remain.
+# but this part of the multiline comment
+# will remain.
 point_val = 15,25
+
