added test of sections with space

--- a/Sini.UnitTest/Sini.UnitTest.csproj
+++ b/Sini.UnitTest/Sini.UnitTest.csproj
@@ -18,6 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="ok_file_section_space.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="ok_file_parsed_and_written_no_comments.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
